<resources>
    <string name="app_name">TubitakProje</string>
    <string name="ileri_button">İleri</string>
    <string name="geri_button">Geri</string>
    <string name="akadlar">Akadlar</string>
    <string name="Asurlar">Asurlar Hakkında Bilgiler</string>
    <string name="Babiller"> Babiller Hakkında Bilgiler</string>
    <string name="Frigler">Frigler Hakkında Bilgiler</string>
    <string name="Hititler">Hititler Hakkında Bilgiler</string>
    <string name="İbraniler">İbraniler Hakkında Bilgiler</string>
    <string name="Lidyalılar">Lidyalılar Hakkında Bilgiler</string>
    <string name="Misir">Mısır Medeniyeti Hakkında Bilgiler</string>
    <string name="Sumerler">Sumerler Hakkında Bilgiler</string>
    <string name="Urartular">Urartular Hakkında Bilgiler</string>
    <string name="Yunan">Yunan Medeniyeti Hakkında Bilgiler</string>
    <string name="Fenikeliler">Fenikeliler Hakkında Bilgiler</string>
    <string name="sumerler_text1">"⦁Sümerler, yaklaşık olarak MÖ 4000-2000 yılları arasında Irak'ın güneyinde (Güney Mezopotamya) yerleşik olan, medeniyetin beşiği olarak bilinen coğrafi bölgede yaşamış bir uygarlıktır. Dünyanın bilinen en eski uygarlıklarından birisi olarak kabul edilir.İlk Çağ’da Mezopotamya’daki dinî inanışlara göre her şey tanrıların malıydı. Tanrılar için çalışan insanlar, ürettiklerini mabetlerde birleştirirdi. Herkes elde ettiği ürünü, tanrının evine yani mabede teslim etmek zorundaydı. Rahipler, vatandaşların teslim ettiği ürünü tabletlere resmederdi. Bunun sonucunda Sümerler, mabet ekonomisinin zorunluluğu ile sembol yazısını (piktograf) icat etti."</string>
    <string name="sumerler_text2">"⦁Sümerlerde yönetici olan “Ensi”, “Lugal” ve “Lugal Kalma”lar aynı zamanda rahip, yargıç ve komutandı. Her kentte Sümerlerin saygı duyduğu tanrılara adanmış ziggurat adı verilen tapınaklar inşa etmişlerdi. Tapınaklarda gözlem yaparak gök biliminde bilimsel gözlem yöntemini keşfetmiş ve bilgileri tablolaştırmıştır. Kuraklık ihtimaline karşı ürünün depolanması ve dağıtılması amacıyla Sümerler, tapınaklarını depo olarak kullandılar."</string>
    <string name="sumerler_text3">"⦁Ay ve Güneş tutulmalarını hesaplamış; Merkür, Venüs, Mars, Jüpiter, Satürn gibi gezegenleri tespit etmiştir."</string>
    <string name="sumerler_text4">"⦁Takvimlerini ay yılı esasına göre hazırlayan Sümerler, bir yılın uzunluğunu sadece 4,5 dakikalık hata ile hesaplamışlardır. "</string>
    <string name="sumerler_text5">"⦁Sümer Kralı Urkagina, MÖ 2375’te tarihte bilinen ilk yazılı kanunları çıkarmıştır. (Urkagina Kanunları)."</string>
    <string name="sumerler_text6">"⦁Site adı verilen şe Shir devletlerini kurmuşlardır. Bu şehir devletlerini yönetenlere “Patesi” ya da “Ensi” denilirdi."</string>
    <string name="sumerler_text7">"⦁Çok tanrılı anlayışın geçerli olduğu Sümerlerden günümüze; Gılgamış, Tufan ve Yaradılış destanları kalmıştır."</string>
    <string name="sumerler_text8">"⦁Kral ve rahipler üst sınıfı oluştururken, halk ise köleler ve hürler olarak ayrılmıştır. Köleler hariç her erkek savaşçı kabul edilmiştir."</string>
    <string name="babiller_text1">"⦁Mezopotamya’da adını aldığı Babil kenti etrafında MÖ 1894 yılında kurulmuş, Sümer ve Akad topraklarını kapsayan bir imparatorluktur."</string>
    <string name="babiller_text2">"⦁Mimaride gelişmiş, Babil Kulesi ve Babil’in Asma Bahçeleri gibi eserler inşa etmişlerdir."</string>
    <string name="babiller_text3">"⦁Babil’in Asma Bahçeleri Dünya’nın Yedi Harikası’ndan biridir."</string>
    <string name="babiller_text4">"⦁Kral Hammurabi tarafından Hammurabi Kanunları hazırlanmıştır. Bu kanun “dişe diş”, “kana kan” prensibindedir."</string>
    <string name="babiller_text5">"⦁MÖ III. binyılın son yüzyıllarında Arabistan’dan Filistin ve Suriye çevresine göç etmişler ve daha sonra buradan da doğuya doğru göçlerini sürdürmüşlerdir. Elamlar ile birlikte Sümer Devleti’nin yıkılmasında başlıca rolü oynamışlardır."</string>
    <string name="babiller_text6">"⦁Asur ve Babillerde kral, büyük tanrıların yeryüzündeki temsilcisi olup onlar adına ülkeyi yöneten rahip krallardı. Kralın kutsal kişiliği tanrılara ve tapınaklara yaptığı hizmetlerle değerlendirilirdi. Ancak ünlü Babil Kralı Hammurabi, bu anlayıştan farklı olarak kendisini adaletin kralı olarak ifade etmiştir."</string>
    <string name="asular_text1">"⦁MÖ II. binin başlarından MÖ 612’de yıkılışına kadar varlığını sürdürmüştür. Mezopotam- ya’nın doğal kaynaklardan yoksun olması Asurların politikalarında ticareti ön plana çıkarmıştır."</string>
    <string name="asular_text2">"⦁Ticareti geliştirmek için Sard’dan başlayıp Asurların başkenti Ninova’ya kadar uzanan Kral Yolu’nu kullandılar."</string>
    <string name="asular_text3">"⦁Ninova şehrinde tarihin bilinen ilk kütüphanesini kurdular. Çivi yazısı kullandılar."</string>
    <string name="asular_text4">"⦁Ticaret ile uğraştıklarından dolayı kara kolonileri kurdular ve yaptıkları ticaret yolları sayesinde Anadolu’yla güçlü ir ticaret bağı oluşturdular. Asurlu Tüccarlar, başta Kültepe olmak üzere Anadolu’nun pek çok yerinde pazarlar kurmuşlardır."</string>
    <string name="asular_text5">"⦁Bu ticaret faaliyetleri ile Anadolu’ya, Sümerlerden öğrendiklerini çivi yazısını getirmiş ve burada tarihi çağları başlatmışlardır."</string>
    <string name="hititler_text1">⦁Hint-Avrupa kökenlidirler. Kafkaslar üzerinden Orta Anadolu’ya, Kızılırmak kıvrımına yerleştiler. Kurucusu Hattuşili’dir. Başkentleri bugünki Çorum yakınlarındaki Hattuşaş’tır.</string>
    <string name="hititler_text2">⦁Önceleri Feodal beylikler halinde yaşarken; daha sonraları bu beylikler yıkılarak merkezi bir krallık etrafında toplanıp güçlü bir devlet oluşturdular.</string>
    <string name="hititler_text3">⦁Kral merkezde olmadığında veya seferde olduğunda ülke Tavananna adı verilen kraliçe tarafından yönetilirdi.</string>
    <string name="hititler_text4">⦁Tarihteki ilk meclisi kurmuşlardır bu meclisin adı pankuş meclisidir.</string>
    <string name="hititler_text5">⦁Hititlerde anal adı verilen ve kral tarafından tanrılarına sunulan yıllıklar bulunurdu.</string>
    <string name="hititler_text6">⦁Hitit dini çok tanrılıydı. Bu nedenle Hitit ülkesine bin tanrılı ülke adı verilmiştir</string>
    <string name="frigler_text1">⦁Boğazlar üzerinden gelerek Hitit hâkimiyetine son veren Frigler, Sakarya nehri civarına yerleşmişlerdir. Başkentleri Gordion(Ankara), en güçlü dönemleri Kral Midas dönemidir. </string>
    <string name="frigler_text2">⦁Fenike alfabesini kullanmışlardır. Kendilerine ait bir dilleri vardır. Bu dil hala çözümlenmiş değildir. </string>
    <string name="frigler_text3">⦁Günümüze kalan en önemli eserleri Kral Midas’ın mezarıdır. </string>
    <string name="frigler_text4">⦁Ekonomisi tarım ve hayvancılığa dayanır. Bu durum inanışlarını ve kanunlarını etkilemiştir. En büyük tanrıları toprak ve bereket tanrısı Kibele’dir. Öküz öldürenin, saban kıranın cezası ölümdür. Tapates adı verilen kilim ve halıları ünlüdür.</string>
    <string name="urartular_text1">⦁Krallıkla yönetilmekte olup, ülke illere bölünmüş, bu illere merkezden atanan valiler gönderilmektedir.</string>
    <string name="urartular_text2">⦁Başkentleri Tuşpa’dır. (Günümüz Van bölgesi)</string>
    <string name="urartular_text3">⦁Anadoluda madencilikte en ileri giden devlettir.</string>
    <string name="urartular_text4">⦁Mimaride ileri gitmişlerdir. En önemli eserleri Van kalesi ve Çavuştepe’dir.</string>
    <string name="urartular_text5">⦁Çok tanrılı bir inanışları bulunmaktadır. En önemli tanrıları savaş tanrısı Haldi’dir.</string>
    <string name="urartular_text6">⦁Ölümden sonraki hayata inandıklarından mezara ölülerin eşyalarını da koymaktadırlar.</string>
    <string name="lidyalilar_text1">⦁Batı Anadolu’da yani günümüz Gediz-Menderes bölgesinde kurulmuşlardır. Başkentleri Sard’dır. (Manisa-Salihli) </string>
    <string name="lidyalilar_text2">⦁Lidya ekonomisinin temeli ticarete dayanır. Ticaretin gelişmesi sonucunda mübadele (değiş-tokuş) sistemi yetersiz kalınca tarihte ilk defa para (sikke)  kullanılmıştır.</string>
    <string name="lidyalilar_text3"> ⦁Efes’ten başlayarak, Lidya başkenti Sard’a ,oradan Asur kentlerine kadar uzanan kral yolunu ticarete açtılar. Doğu-Batı ticaretinin gelişmesine yol açmıştır.</string>
    <string name="mısır_text1">⦁Heredot’a göre Mısır Nil’in armağanıdır. Mısır’a hayat veren Nil Irmağıdır. Heredot’un sözlerini doğrulayan gelişme ise; Mısır’da insan yerleşiminin ve uygarlık merkezlerinin Nil etrafında toplanmasıdır.</string>
    <string name="mısır_text2">⦁Mısır’da uygarlık Nom adı verilen şehir devletleriyle başladı. Nomların daha sonraki dönemlerinde birleştirilmesiyle merkezi yönetime geçildi.</string>
    <string name="mısır_text3">⦁Mısır’da tanrı – kral anlayışı vardı. Mısır krallarına Firavun adı verilirdi. Firavunların her sözü kanun olarak kabul edilirdi, bu yüzden de Mısır’da yazılı hukuk kuralları gelişmemiştir.</string>
    <string name="mısır_text4">⦁Mısır halkı ölümden sonraki hayata inanır ve ölülerinin bedenen dirileceğini sanarlardı. Bu yüzden Mısır’da mumyacılık milli bir sanat haline gelmişti,</string>
    <string name="mısır_text5">⦁Mısırlılar ölen firavunları için dünyanın yedi harikasından biri olan piramitleri (anıt mezarlar), halk içinde labirentleri inşa ettiler</string>
    <string name="mısır_text6"> ⦁Mısırlılar Papirus adı verilen bataklık bitkisinden kağıt yaptılar, bunun yanısıra hiyeroglif adı verilen resim yazısını kullandılar.</string>
    <string name="fenikeliler_text1">⦁ Bu medeniyet Doğu Akdeniz sahil şeridi ile Lübnan dağları arasında kalan bölgede, tüccar kavimlerce kurulmuştur.Yöre halkı bulundukları bölgelerin tarıma elverişli olmamasından dolayı da deniz ticareti ve koloniciliğe yönelmiştir kurdular, ayrıca Fenikeliler cam ve boyayı da buldular.</string>
    <string name="fenikeliler_text2">⦁Fenikeliler, kolonilerini sadece ticari amaçlı olarak kullandılar. Bu durum kolonilerdeki siyasi varlıkların kısa süreli olmasına neden olmuştur.</string>
    <string name="fenikeliler_text3">⦁Fenikelilerin en önemli kolonileri Kartaca’dır.</string>
    <string name="fenikeliler_text4">⦁Fenikeliler Mısır’dan öğrendikleri resim yazısını geliştirerek harf haline getirmiş ve böylece dünyanın ilk alfabesini kullanmışlardır.</string>
    <string name="ibraniler_text1">⦁Sami ırkından olan İbraniler, bugünkü Filistin toprakları üzerinde devletlerini kurdular. Başkentleri Kudüs olarak kabul edilmektedir. Hz. Davut, Hz. Süleyman Peygamber olan hükümdarlarındandır.</string>
    <string name="yunan_text1">⦁Yunan Medeniyeti Yunanistan’ı istila eden Dor’lar tarafından kurulmuştur. Bu bölgede bulunan Akaların, Dorların ve bölgedeki yerli halkın kaynaşması ile Yunan Medeniyeti oluşmuştur. </string>
    <string name="yunan_text2">⦁Dor göçleri ile Akaların oluşturdukları krallık dönemi kapandı, bunların yerine Polis adı verilen şehir devletleri ortaya çıktı. Atina, Sparta, Korint, Tebai ve Larissa en önemli şehir devletlerindendir. </string>
    <string name="yunan_text3">⦁Yunan şehir devletleri krallık, oligarşik yönetimler tiranlık ve ilkel demokrasi şeklinde yönetildiler. Yöre halkı bölgenin dağlık yapısından ve verimli arazilerin azlığından dolayı deniz ticaretine ve koloniciliğe yöneldi.</string>
    <string name="yunan_text4">⦁Yunan Polislerinde (şehir devletleri) sınıflar arası çatışmaların başlaması üzerine Arhon adı verilen kanun koyucular iş başına getirildi. Arhonların başlıcaları ve yaptıkları kanunların genel özellikleri şu şekildedir;</string>
    <string name="yunan_text5">⦁Drakon: Asilleri koruyan yasalar yaptı. </string>
    <string name="yunan_text6">⦁Solon: Asaletten kaynaklanan sınıf ayrılıklarını kaldırdı. Bununla birlikte halkı gelirlerine göre sınıflara ayırdı.</string>
    <string name="yunan_text7">⦁Klistenes: Halk meclislerini kurarak halkı yönetime katmaya çalıştı. </string>
</resources>